syntax = "proto3";

package celinlim.interstaking;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "celinium/x/inter-staking/types";

message DelegationPlan {
    uint32 percentage = 1;
    string validator_address = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];    
}

message SourceChainMetadata{
    option (gogoproto.equal)           = false;
    option (gogoproto.goproto_getters) = false;

    string ibcClientId = 1;
    
    string ibcConnectionId = 2;
    
    string ibcInterChainAccount = 3;

    string stakingDenom = 4;

    repeated DelegationPlan delegate_plan = 5;
}

message Validator {
    option (gogoproto.equal)           = false;
    option (gogoproto.goproto_getters) = false;

    string  validator_address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

    cosmos.base.v1beta1.Coin amount = 2 [(gogoproto.nullable) = false];
}
